--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       dockerfile: Dockerfile
     container_name: ets2server
     restart: unless-stopped
+    network_mode: host
     ports:
       - "27015:27015/tcp"
       - "27016:27016/tcp"
