--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
     container_name: ets2server
     restart: unless-stopped
 #    network_mode: host
-    ports:
-      - "27015:27015/tcp"
-      - "27016:27016/tcp"
-      - "27015:27015/udp"
-      - "27016:27016/udp"
+#    ports:
+#      - "27015:27015/tcp"
+#      - "27016:27016/tcp"
+#      - "27015:27015/udp"
+#      - "27016:27016/udp"
